changed quotes to use fortune style and files

--- a/code/onion/onion-quoteserver/src/main/resources/static/index.html
+++ b/code/onion/onion-quoteserver/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
         getQuote
     </button>
     <div>
-        {{quote.text }}
+        <pre>{{quote.text }}</pre>
     </div>
 </div>
 </body>
