set port and dates for index.html

--- a/code/onion/onion-directorynode/src/main/resources/static/index.html
+++ b/code/onion/onion-directorynode/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/angular.min.js"></script>
     <script src="js/directoryNodeApp.js"></script>
-    <title>Chainnode</title>
+    <title>DirectoryNode</title>
 </head>
 <body ng-controller="chainNodeInfoController">
 <div class="container-fluid">
