--- a/code/onion/onion-client/src/main/resources/static/index.html
+++ b/code/onion/onion-client/src/main/resources/static/index.html
@@ -18,12 +18,13 @@
     Send Request
 </button>
 <button ng-click="sendBomb()" ng-disabled="isRequesting">
-    BombN
+    Send 20 Concurrent Requests
 </button>
 <button ng-click="sendHelp()" ng-disabled="isRequesting">
     Help
 </button>
-<button ng-click="sendExit()" ng-disabled="isRequesting">
+<button ng-click="sendExit()" ng-disabled
+        ="isRequesting">
     Exit
 </button>
 </div>
