--- a/code/onion/onion-directorynode/src/main/resources/static/index.html
+++ b/code/onion/onion-directorynode/src/main/resources/static/index.html
@@ -24,8 +24,8 @@
             <td><a href="{{'http://'+ ci.publicIP + ':' +ci.port + '/'}}">{{ci.id}}</a></td>
             <td>{{ci.publicIP}}</td>
             <td>{{ci.port}}</td>
-            <td>{{ci.launchedDate}}</td>
-            <td>{{ci.lastLifeCheck}}</td>
+            <td>{{ci.launchedDate | date:'short' }}</td>
+            <td>{{ci.lastLifeCheck | date:'short' }}</td>
             <td>{{ci.sentMessages}}</td>
         </tr>
     </tbody>
