- Client WebGUI improved

--- a/code/onion/onion-quoteserver/src/main/resources/static/index.html
+++ b/code/onion/onion-quoteserver/src/main/resources/static/index.html
@@ -13,7 +13,10 @@
         getQuote
     </button>
     <div>
-        <pre>{{quote.text }}</pre>
+        <pre>{{quote }}</pre>
+    </div>
+    <div>
+        <pre>{{status }}</pre>
     </div>
 </div>
 </body>
