--- a/code/onion/onion-directorynode/src/main/resources/static/index.html
+++ b/code/onion/onion-directorynode/src/main/resources/static/index.html
@@ -17,7 +17,8 @@
         <td>Port</td>
         <td>Launched At</td>
         <td>Last Life Check At</td>
-        <td>messages routed</td>
+        <td>Messages Routed</td>
+        <td>Load Balancing Weight</td>
     </thead>
     <tbody>
         <tr ng-repeat="ci in chainNodeInfos">
@@ -27,6 +28,7 @@
             <td>{{ci.launchedDate | date:'short' }}</td>
             <td>{{ci.lastLifeCheck | date:'short' }}</td>
             <td>{{ci.sentMessages}}</td>
+            <td>{{ci.lastLoadBalancingWeight | number:6 }}</td>
         </tr>
     </tbody>
 </table>
